figue/tests/integration/snapshots/main__integration__err__error_non_struct_type_not_supported.snap
---
source: figue/tests/integration/err.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
Error: top-level shape must be a struct
   ╭─[ <unknown>:1:1 ]
   │
 1 │ ╭─▶ #[derive(Facet)]
   ┆ ┆   
 3 │ │   enum Args {
   │ │        ──┬─  
   │ │          ╰─── defined at figue/tests/integration/err.rs:7
   ┆ ┆   
 6 │ ├─▶ }
   │ │   ┬  
   │ │   ╰── end of definition
   │ │      
   │ ╰────── top-level shape must be a struct
───╯
